--- a/client/css/search.css
+++ b/client/css/search.css
@@ -37,6 +37,11 @@ body {
 	background-color: #0f0044;
 }
 
+.dark {
+	background-color: #0e0e0e !important;
+	color:#fff !important;
+}
+
 .topic-heading {
 	display: flex;
 	justify-content: center;
