--- a/client/css/search.css
+++ b/client/css/search.css
@@ -45,9 +45,37 @@ body {
 .topic-heading {
 	display: flex;
 	justify-content: center;
-	font-weight: lighter;
+	font-weight: bolder;
 	font-size: 2vw;
 }
+
+.rainbow {
+	background-image: -webkit-linear-gradient(92deg,#4158D0, #C850C0, #FFCC70);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: hue 10s infinite linear;
+	-webkit-animation: hue 10s infinite linear;
+}
+
+@keyframes hue {
+	from {
+	  filter: hue-rotate(0deg);
+	}
+	to {
+	  filter: hue-rotate(-360deg);
+	}
+}
+
+@-webkit-keyframes hue {
+	from {
+	  -webkit-filter: hue-rotate(0deg);
+	}
+	to {
+	  -webkit-filter: hue-rotate(-360deg);
+	}
+  }
+
 
 .main-wrap {
 	position: relative;
@@ -56,7 +84,7 @@ body {
 	align-items: center;
 	width: 100%;
 	height: 100vh;
-	background-color: #fff59a;
+	background-color: #fff;
 	background-repeat: no-repeat;
 	background-position: 50% 10em;
 	background-size: 75% auto;
@@ -277,24 +305,24 @@ button:focus {
 	width: 100%;
 	max-width: 900px;
 	padding: 0 0 0.1em;
-	color: #fff59a;
+	color: #fff;
 	border-bottom: 6px solid;
 }
 
 .search__input::-webkit-input-placeholder {
 	/* WebKit, Blink, Edge */
-	color: #fff59a;
+	color: #fff;
 }
 
 .search__input::-moz-placeholder {
 	opacity: 1;
 	/* Mozilla Firefox 19+ */
-	color: #fff59a;
+	color: #fff;
 }
 
 .search__input:-ms-input-placeholder {
 	/* Internet Explorer 10-11 */
-	color: #fff59a;
+	color: #fff;
 }
 
 .search__input::-webkit-search-cancel-button,
@@ -342,7 +370,7 @@ button:focus {
 }
 
 .page__folder:nth-child(3) {
-	background: #fff59a;
+	background: #f6deac;
 }
 
 /************************/
